Fix: global.css에서 overflow-x-hidden 삭제, header sticky 및 shadow 추가

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,13 +23,11 @@
 
   html,
   body {
-    @apply max-w-full overflow-x-hidden;
+    @apply max-w-full;
     -ms-overflow-style: none;
     /* IE와 Edge */
     scrollbar-width: none;
     /* Firefox */
-    margin-top: 80px;
-    /* 헤더 길이 */
   }
 
   body {
